# image_2_biomass

./: Install_Dependencies.txt  LICENSE  MakeFile  README.md  api_server_config.conf  app.json  app_http_ip_address_ipconfig.txt  backup_project.ps1  check_access_to_front_end_port.ps1  check_firewall.ps1  clean_installation_block_of_a_react_module.ps1  clean_up_project.ps1  complete_expo_setup.ps1  create_a_new_package.json.ps1  deploy.sh  docker-compose.prod.yml  docker-compose.yml  expo.json  fix_package.json.ps1  jsconfig.json  localhost_port_work_arounds.ps1  metro.config.js  mginx.conf  nginx_directory_paths.ps1  node_app_modules_reinstallation_node_modules..txt  open package.json.ps1  package-lock.json  package.json  pip_installation_guide.txt  pip_make_shift_necessary_installations.txt  rename-jsx-tsx.ps1  requirements.txt  tsconfig.json  vercel.json
backend-services/: drop_all_tables.sql  pasture_psql_schema.psql  pasture_schema_test.sql
backend-services/api-gateway/: DockerFile  pyproject.toml  requirements.txt
backend-services/api-gateway/app/: main.py  main_do_not_use.py  main_no_use.py
backend-services/auth-services/: DockerFile  pyproject.toml  requirements.txt
backend-services/auth-services/app/: main.py  middleware.py
backend-services/data_services/: DockerFile  main.py  pyproject.toml  requirements.txt
backend-services/data_services/app/: farm_service.py  user_service.py
backend-services/data_services/app/models/: Tables.txt
backend-services/data_services/app/schemas/: Create_Table_Schema.sql  Schemas.txt
backend-services/database_connection/: SET_ENVIRONMENT_VARIABLE..txt  db_connection.py
backend-services/image_processing_services/: DockerFile  pyproject.toml  requirements.txt
backend-services/image_processing_services/app/: main.py
backend-services/image_processing_services/app/processors/: Image_Processor.py
backend-services/image_processing_services/app/validators/: image_validator.py
backend-services/ml_prediction_services/: DockerFile  pyproject.toml  requirements.txt
backend-services/ml_prediction_services/app/: main.py
backend-services/services/: api.ts
front-end/: metro.config.js  package.json
front-end/public/: index.html
front-end/src/: AddEdditFarmScreen.js  AnalyticsScreen.js  App.js  AppNavigator.js  Button.js  CameraScreen.css  CameraScreen.ts  CameraView.css  CameraView.ts  DashboardSreen.js  DeleteConimationModal.ts  DocumentScreen.js  EndUrls.js  ErrorBoundary.js  FarmDetailsScreen.js  FarmFormModal.js  FarmManagementScreen.css  FarmManagementScreens.ts  FarmStats.js  FarmormModal.css  FarmsList.ts  Footer.js  ForgottenPasswordScreen.css  ForgottenPasswordScreen.js  Header.js  HelpScreen.js  HistoryScreen.css  HistoryScreens.js  ImagePreview.css  ImagePreview.js  ImageUploader.ts  InputField.css  InputField.js  LandingScreen.css  Landing_Screen.ts  Layout.js  LoadingSpinner.css  LoadingSpinner.js  LoginScreen.css  LoginScreen.js  (+28 more)
front-end/src/Layouts/: AppLayouts.js  AuthLayout.js  PublicLayout.js
front-end/src/hooks/: useNavigationHistory.js  useTheme.js
front-end/src/profile/: EditProfileScreen.css  EditProfileScreen.js  ProfileScreen.css  ProfileScreen.tsx
front-end/src/reducers/: authReducers.ts  farmsReducer.ts  imageReducer.ts  index.js  userReducer.js
front-end/src/services/: apiService.js  settingsService.js.js
front-end/src/styles/: app.css  home_Style..css  theme.css
front-end/src/terms_and_policies/: PolicyScreen.css  PolicyScreen.js  TermsScreen.css  TermsScreen.js
front-end/src/types/: settings.ts
front-end/src/utility/: calculations.js  imageUtils.js  validations.js
front-end/src/utils/: ApiCalls.js  BrowseStorage.js  ResponsiveUtils.js  ThemeManager.js  UserSession.js  auth.ts  imageProcessor.js  (+6 more)
ml_training/: Installing_All_Requirements_txt_PYTHON_LIBRARIES.txt
ml_training/notebooks/: model_training.ipynb
(+9 files in other folders)
