[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "api-gateway"
version = "1.0.0"
description = "API Gateway service for microservices platform"
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
dependencies = [
    "fastapi==0.104.0",
    "uvicorn[standard]==0.24.0",
    "httpx==0.25.2",
    "redis==5.0.1",
    "python-jose[cryptography]==3.3.0",
    "python-multipart==0.0.6",
    "python-dotenv==1.0.0",
    "pydantic==2.4.2",
    "pydantic-settings==2.1.0",
    "asyncio==3.4.3",
    "aiofiles==23.2.1",
]
requires-python = ">=3.8"

[project.scripts]
api-gateway = "api_gateway.main:app"