[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "image-processing-services"
version = "1.0.0"
description = "Image processing and computer vision services"
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
dependencies = [
    "fastapi==0.104.0",
    "uvicorn[standard]==0.24.0",
    "opencv-python==4.8.1.78",
    "numpy==1.24.3",
    "Pillow==10.1.0",
    "redis==5.0.1",
    "asyncpg==0.29.0",
    "python-multipart==0.0.6",
    "python-dotenv==1.0.0",
    "scikit-image==0.22.0",
    "scipy==1.11.3",
]
requires-python = ">=3.8"

[project.scripts]
image-service = "image_processing_services.main:app"